--- a/estilos/style.css
+++ b/estilos/style.css
@@ -38,6 +38,7 @@ section#login{
     transform: translate(-50%, -50%);
     border-radius: 20px;
     text-align: justify;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.404);
 }
 
 div#formulario{
