--- a/estilos/style.css
+++ b/estilos/style.css
@@ -30,7 +30,7 @@ main{
 
 section#login{
     width: 300px;
-    height: 600px;
+    height: 50vh;
     background-color: white;
     position: absolute;
     top: 50%;
