--- a/estilos/style.css
+++ b/estilos/style.css
@@ -30,7 +30,7 @@ main{
 
 section#login{
     width: 300px;
-    height: 50vh;
+    height: 500px;
     background-color: white;
     position: absolute;
     top: 50%;
@@ -39,6 +39,8 @@ section#login{
     border-radius: 20px;
     text-align: justify;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.404);
+    transition: width .3s, height .3s;
+    transition-timing-function: ease;
 }
 
 div#formulario{
@@ -46,5 +48,94 @@ div#formulario{
 }
 
 div#formulario > h1{
+    text-align: center;
     margin-bottom: 10px;
+}
+
+div#formulario > p{
+    font-size: 0.9em;
+    margin-bottom: 10px;
+}
+
+label{
+    font-size: 0.9em;
+    display: none;
+}
+
+a{
+    font-size: 0.9em; 
+}
+
+.campo{
+    display: block;
+    background-color: rgb(5, 178, 152);
+    margin: 5px 0px;
+    border-radius: 5px;
+    width: 100%;
+    height: 40px;
+
+}
+#icone{
+    width: 40px;
+    font-size: 2em;
+    color: white;
+    text-shadow: 0 0 5px black;
+    padding: 5px;
+    margin-top: 0px;
+}
+
+.campo > input{
+    width: calc(100% - 47px);
+    height: 85%;
+    font-size: 1em;
+    border-radius: 5px;
+    border: none;
+    transform: translateY(-12px);
+    background-color: rgb(149, 251, 208);
+    padding: 4px;
+}
+
+.campo > input:focus{
+    background-color: rgb(255, 255, 255);
+}
+
+#enviar[type=submit]{
+    display: block;
+    font-size: .9em;
+    font-weight: bolder;
+    border: 2px rgb(5, 110, 105) solid;
+    border-radius: 5px;
+    width: 100%;
+    padding: 5px;
+    background-color: rgb(3, 136, 138);
+    color: white;
+}
+
+#enviar[type=submit]:hover{
+    background-color: rgb(57, 189, 191);
+}
+
+#esqueci{
+    text-align: center;
+    display: block;
+    font-size: .9em;
+    font-weight: bolder;
+    border: 2px rgb(5, 110, 105) solid;
+    border-radius: 5px;
+    width: 100%;
+    padding: 5px;
+    background-color: rgb(3, 136, 138);
+    color: white;
+    margin-top: 5px;
+    padding-top: 8px;
+    height: 40px;
+    text-decoration: none;
+}
+#esqueci:hover{
+    background-color: rgb(57, 189, 191);
+}
+
+#esqueci > span{
+    font-size: 1em;
+    margin-left: 5px;
 }
